force-app/main/default/objects/Deal_Sales_Stage_Map__mdt/Deal_Sales_Stage_Map__mdt.object-meta.xml
<CustomObject><label
  >Deal Sales Stage Map</label><pluralLabel
  >Deal Sales Stage Maps</pluralLabel><visibility
  >Public</visibility></CustomObject>