force-app/main/default/objects/Deal_Sales_Stage_Map__mdt/fields/Canonical_Stage__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Stage__c</fullName>
    <description
  >One of Deal_Registration__c.Stage__c's values (Qualification/Discovery/
  Proposal/Negotiation/Closed Won/Closed Lost). Free text, not a mirrored
  picklist, matching this codebase's convention of CMDT policy rows
  storing their target picklist value as text.</description>
    <label>Canonical Stage</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>