force-app/main/default/objects/Deal_Sales_Stage_Map__mdt/fields/Opportunity_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Name__c</fullName>
    <description
  >The org's actual configured Opportunity.StageName value to match -
  never assumed to be a standard label (Sprint 39 §39.16-39.18). Null on
  the one Default record, used as the unmapped-stage fallback.</description>
    <label>Opportunity Stage Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>